--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,7 @@ LazyData: true
 Depends: 
     R (>= 3.5)
 Imports:
-    crayon,mvtnorm,mixtools,mclust,ggplot2,stats,utils,MASS,IMIX,gdata
+    crayon,mvtnorm,mixtools,mclust,ggplot2,stats,utils,MASS,IMIX,gdata,nlme
 Suggests: knitr,rmarkdown
 VignetteBuilder: knitr
 RoxygenNote: 7.1.1
