--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(IMIX_pi)
 export(fit_multi)
 export(fit_uni)
 export(imix_spatial)
+export(summary_spatial)
 importFrom(stats,dnorm)
 importFrom(stats,qnorm)
 importFrom(utils,tail)
