--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,9 +10,9 @@ License: GPL-2
 Encoding: UTF-8
 LazyData: true
 Depends: 
-    R (>= 3.5)
+    R (>= 3.5),nlme
 Imports:
-    crayon,mvtnorm,mixtools,mclust,ggplot2,stats,utils,MASS,IMIX,gdata,nlme
+    crayon,mvtnorm,mixtools,mclust,ggplot2,stats,utils,MASS,IMIX,gdata
 Suggests: knitr,rmarkdown
 VignetteBuilder: knitr
-RoxygenNote: 7.1.1
+RoxygenNote: 7.2.0
